@startuml stateDiagram
hide empty description

state AwaitingPlayers
state AwaitingSelection
state ShowingClue
state AwaitingResponse
state ShowingResult
state AwaitingProtest
state VotingOnProtest

state join <<choice>>
state answerClue <<choice>>
state voteOnProtest <<choice>>

title \n=Engine State\n

[*] -> AwaitingPlayers : host()
AwaitingPlayers --> join : join()
join --> AwaitingPlayers : [more space]
join --> AwaitingSelection : [game full]
AwaitingSelection --> ShowingClue : selectClue()
AwaitingSelection --> AwaitingSelection : [timeout]
AwaitingSelection --> [*] : [game over]
ShowingClue --> AwaitingResponse: buzzIn()
ShowingClue --> ShowingResult: [timeout]
AwaitingResponse --> answerClue : answerClue() \n or [timeout]
answerClue --> ShowingResult : [correct] or \n [everyone wrong]
answerClue --> ShowingClue : [incorrect]
ShowingResult --> AwaitingProtest : protestResult()
AwaitingProtest --> VotingOnProtest : selectProtest()
AwaitingProtest --> ShowingResult : [timeout]
VotingOnProtest --> voteOnProtest : voteOnProtest() \n or [timeout]
voteOnProtest --> VotingOnProtest : [outstanding votes]
voteOnProtest --> ShowingResult : [all votes counted]
ShowingResult --> AwaitingSelection : [timeout] or \n [no protest]

@enduml